--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/fortify": "^1.20",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.8",
         "mcamara/laravel-localization": "^1.8",
         "pusher/pusher-php-server": "^7.2",
