--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.8",
         "mcamara/laravel-localization": "^1.8",
         "pusher/pusher-php-server": "^7.2",
+        "stripe/stripe-php": "^13.13",
         "symfony/intl": "^6.4"
     },
     "require-dev": {
